# multi-modal-mental-health-ai

./: .gitignore  README.md  admin.py  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260501_1903_d84ac6b1c52c_initial_schema.py
backend/: main.py  requirements.txt
backend/core/: config.py  database.py  dependencies.py  security.py
backend/models/: analysis.py  assessment.py  chat.py  journal.py  mood.py  user.py
backend/routes/: assessment.py  auth.py  chat.py  emotion.py  journal.py  mood.py
backend/schemas/: assessment.py  auth.py  chat.py  emotion.py  journal.py  mood.py  user.py
core/: config.py  database.py  dependencies.py  email.py  exceptions.py  redis.py  security.py
frontend/Eunoia/: app.json  package-lock.json  package.json
ml/: bert_classifier.py  cbt_templates.py  facial_emotion.py  media_processor.py  speech_emotion.py
ml/training/: train_bert.py  train_facial.py  (+1 more)
models/: __init__.py  ai_analysis_result.py  assessment.py  base.py  chat_message.py  chat_session.py  journal.py  late_fusion_report.py  mood_log.py  otp_code.py  risk_log.py  therapist.py  user.py  user_settings.py
routes/: assessments.py  auth.py  chat.py  journal.py  mood.py  reports.py  user.py
schemas/: __init__.py  assessment.py  auth.py  chat.py  journal.py  late_fusion_report.py  mood_log.py  risk_log.py  therapist.py  user.py  user_settings.py
scripts/: seed_therapists.py
services/: assessment_service.py  auth_service.py  chat_service.py  journal_service.py  mood_service.py  report_service.py  user_service.py
(+31 files in other folders)
